# redclaw-skill

./: LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: alerts.sh  keywords.sh  sources.sh  status.sh
tests/: test_skill_structure.py
