[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redclaw-skill"
version = "1.0.0"
description = "OpenClaw skill for Redclaw keyword monitoring"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
